...
    android:id="@+id/deleteAccountBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <TextView
        android:id="@+id/currentBuilding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
...
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="changePassword"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewHistorybtn"
        app:layout_constraintTop_toBottomOf="@+id/currentBuilding" />

    <Button
        android:id="@+id/viewHistorybtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="viewHistory"
        android:text="@string/view_history"
        app:layout_constraintBottom_toTopOf="@+id/checkOutbtn"
        app:layout_constraintEnd_toStartOf="@+id/changePasswordbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBuilding" />

    <Button
        android:id="@+id/checkOutbtn"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="checkOut"
        android:text="@string/check_out"
        app:layout_constraintEnd_toStartOf="@+id/signOutbtn"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordbtn" />

    <Button
        android:id="@+id/signOutbtn"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fname_text"
        app:layout_constraintTop_toBottomOf="@+id/student_photo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editImagebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:onClick="editImage"
...
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/student_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="deleteAccount"
...
