...
    <string name="firstname"><u>First Name:</u></string>
    <string name="lastname"><u>Last Name:</u></string>
    <string name="uscid"><u>USC ID:</u></string>
    <string name="major"><u>Major:</u></string>
    <string name="current_location"><u>Current Location:</u></string>
    <string name="delete_dialog_title">Delete Account</string>
    <string name="delete_dialog_message">Are you sure you want to delete your account?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="new_password">Input New Password</string>
    <string name="account_deleted"><b>User Account Has Been Deleted!</b></string>

    <string name="search_invalid_usc_id">Please enter a valid USC id or leave the field blank</string>
    <string name="search_invalid_dates">Please select an end date that is after the selected start date</string>

...
